--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,22 @@
   }
 }
 
+@property --hue {
+  syntax: "<angle>";
+  inherits: false;
+  initial-value: 0deg;
+}
+
+.bg-grid {
+  background-size: 40px 40px;
+  background-image: linear-gradient(
+      to right,
+      rgba(209, 213, 219, 0.1) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, rgba(209, 213, 219, 0.1) 1px, transparent 1px);
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -43,6 +59,8 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --font-bakbak: "Bakbak One", sans-serif;
+    --font-dm-sans: "DM Sans", sans-serif;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -78,5 +96,17 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-bakbak;
+  }
+
+  p {
+    @apply font-dm-sans;
   }
 }
