--- a/app/globals.css
+++ b/app/globals.css
@@ -59,7 +59,7 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --font-bakbak: "Bakbak One", sans-serif;
+    --font-inter: "Inter", sans-serif;
     --font-dm-sans: "DM Sans", sans-serif;
   }
   .dark {
@@ -103,7 +103,7 @@
   h4,
   h5,
   h6 {
-    @apply font-bakbak;
+    @apply font-heading font-semibold;
   }
 
   p {
